# lti-demo

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
docs/: lti-guide.md  technical.md
exam-tool/: app.py  lti.py
exam-tool/templates/: admin.html  admin_login.html  base.html  detail.html  error.html  exam.html  result.html
platform/: app.py  lti.py
platform/templates/: add_tool.html  base.html  course_detail.html  dashboard.html  login.html  lti_launch.html  oidc_response.html  register.html  tools.html
